--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux": "^4.2.1",
     "sass": "^1.58.0",
     "tailwindcss": "^3.2.7",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
