--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "sass": "^1.58.0",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^9.0.5",
     "tailwindcss": "^3.2.7",
     "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
